# Obd2-Emulator

./: CMakeLists.txt  CMakeLists.txt.user.28eaf8f  boxblur.frag  main.cpp  readme.md
Qml/: Main.qml  MainPage.qml  Obd2Screen.qml  boxblur.frag.qsb
Qml/Speedometers/: SpeedometerRPM.qml  SpeedometerSpeed.qml  SpeedometerTemp.qml  SpeedometerVoltage.qml
Src/Header/: SerialPortConnector.h  SerialPortScanner.h  SerialPortWorker.h
Src/Header/logger/: OBD_Logger.h
Src/Source/: SerialPortConnector.cpp  SerialPortScanner.cpp  SerialPortWorker.cpp
Src/Source/logger/: OBD_Logger.cpp
